--- a/python-modules/pardus-python/README
+++ b/python-modules/pardus-python/README
@@ -1,5 +1,6 @@
-PMP
+Pardus Python
 ---
-Python Modules for Pardus (PMP) are the generic modules used (or to be
-used) by Pardus projects.
+
+Python Modules for Pardus are the generic modules used (or to be used)
+by Pardus projects.
 
