--- a/kaptan/po/es.po
+++ b/kaptan/po/es.po
@@ -1,30 +1,31 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# translation of es.po to spanish
+# Copyright (C) 2007 Free Software Foundation, Inc.
 #
+# Klemens Häckel <click3d_at_linuxmail_org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: kaptan\n"
+"Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 20:44+0200\n"
-"PO-Revision-Date: 2006-11-28 19:46-0400\n"
-"Last-Translator: Klemens Häckel <click3d@linuxmail.org>\n"
+"PO-Revision-Date: 2007-02-04 09:41+0200\n"
+"Last-Translator: Klemens Häckel <click3d_at_linuxmail_org>\n"
 "Language-Team: spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 99
 #: rc.cpp:66 ../src/packagedlg.cpp:104
 #, no-c-format
 msgid " hours"
-msgstr ""
+msgstr " horas"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 167
 #: rc.cpp:52 ../src/mousedlg.cpp:122
 #, no-c-format
 msgid "&Single-click to open files and folders"
-msgstr ""
+msgstr "Clic &simple para abrir archivos y carpetas"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 134
 #: rc.cpp:33 ../src/wallpaperdlg.cpp:99
@@ -41,10 +42,12 @@ msgid ""
 "But also can work in the system tray and periodically checks new upgrades of "
 "the programs that are installed on your system."
 msgstr ""
+"<b>Administrador de Paquetes</b> es la interfaz gráfica de <b>PiSi</b>. Con el administrador de paquetes puede instalar fácilmente nuevos programas y actualizar su sistema. "
+"Pero tambien puede funcionar en la barra de tareas y verificar periodicamente actualizaciones disponibles para los programas instalados."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
 #: rc.cpp:16 ../src/welcomedlg.cpp:67
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "<b>Pardus </b>is a GNU/Linux distribution, targeting at computer literate "
 "users' basic desktop needs; with acquiring the strong ideas, architecture "
@@ -52,22 +55,21 @@ msgid ""
 "has the ability to evolve into an autonomous system; for simplifying the "
 "installation and usage of the computers."
 msgstr ""
-"Pardus es una distribución GNU/Linux, destinado para las necesidades basicos "
+"<b>Pardus </b> es una distribución GNU/Linux, destinado para las necesidades basicos "
 "de escritorio; aprovechando ideas, architectura y código de otras "
-"distribuciones ; Con una herramienta adaptada de configuración que tiene la "
-"opciónde convertirse en un producto independiente; para la simplificación de "
+"distribuciones ; Con una herramienta de configuración adaptada que tiene la "
+"opción de convertirse en un producto independiente; para la simplificación de "
 "la instalación y uso de las computadoras."
 
 #: ../src/network.cpp:42
 msgid "<big>Loading...</big>"
-msgstr ""
+msgstr "<big>Cargando...</big>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
 #: rc.cpp:7 ../src/goodbyedlg.cpp:67
 #, no-c-format
-msgid ""
-"<center>You have finished!  Now you can start using <b>Pardus</b></center>"
-msgstr ""
+msgid "<center>You have finished!  Now you can start using <b>Pardus</b></center>"
+msgstr "<center>Terminado !  Ahora puede empezar a usar <b>Pardus</b></center>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
 #: rc.cpp:42 ../src/mousedlg.cpp:118
@@ -79,17 +81,17 @@ msgstr "Orden de botones"
 #: rc.cpp:62 ../src/packagedlg.cpp:102
 #, no-c-format
 msgid "Check updates automatically for every"
-msgstr ""
+msgstr "Comprobar actualizaciones automáticamente cada"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 156
 #: rc.cpp:49 ../src/mousedlg.cpp:121
 #, no-c-format
 msgid "Click behaviour"
-msgstr ""
+msgstr "Comportamiento de Clic"
 
 #: ../src/kaptan.cpp:65
 msgid "Congratulations"
-msgstr "Felicidades"
+msgstr "Felicitaciones"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 62
 #: rc.cpp:29 ../src/wallpaperdlg.cpp:97
@@ -101,49 +103,43 @@ msgstr "No cambiar el fondo de escritorio !"
 #: rc.cpp:55 ../src/mousedlg.cpp:123
 #, no-c-format
 msgid "Dou&ble-click to open files and folders (select icons on first click)"
-msgstr ""
+msgstr "Haga do&ble -clic para abrir archivos y carpetas (primero seleccione con un clic los iconos)"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 27
 #: rc.cpp:78 ../src/styledlg.cpp:95
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Here, you can select a <b>style </b>for your desktop. <b>Pardus</b> provides "
 "some eye candy styles for you."
-msgstr ""
-"Aqui puedes elegir una imagen para el fondo de tu escritorio. Pardus viene "
-"con fondos hermosos, puedes elegir a gusto :)."
+msgstr "Aqui puedes elegir un <b>estilo </b>para el escritorio. <b>Pardus</b> trae algunos estilos lindos para usar."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 27
 #: rc.cpp:23 ../src/wallpaperdlg.cpp:95
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Here, you can select a <b>wallpaper</b> for your desktop background. "
 "<b>Pardus</b> provides eye candy wallpapers, you can select one of them, as "
 "you wish."
 msgstr ""
-"Aqui puedes elegir una imagen para el fondo de tu escritorio. Pardus viene "
-"con fondos hermosos, puedes elegir a gusto :)."
+"Aqui puedes elegir una <b>imagen de fondo</b> de escritorio. "
+"<b>Pardus</b> viene con fondos hermosos para elegir."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
 #: rc.cpp:39 ../src/mousedlg.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If you are left-handed, you may prefer to swap the functions of the left and "
 "right buttons on your pointing device by choosing the 'Left handed' option "
 "below. You can also select default click behaviour."
 msgstr ""
-"Si eres zurdo podrías preferir invertir las funciones de los botones de tu "
-"puntero (ratón) indicando la opción 'Zurdo' abajo.Si tu puntero tiene más de "
-"dos botones, solamente se afecta el  funcionamiento de los botones de la "
-"derecha y de la izquierda. Si por ejemplo tienes un ratón de tres botones, "
-"el botón del medio no está afectado."
+"Si eres zurdo podría preferir invertir las funciones de los botones del "
+"puntero (ratón) indicando la opción 'Zurdo' abajo. Tambien se puede establecer el comportamiento por defecto."
 
 #: ../src/main.cpp:18
 msgid "Kaptan Desktop"
 msgstr "Kaptan Desktop"
 
 #: ../src/mouse.cpp:32
-#, fuzzy
 msgid "Left handed"
 msgstr "&Zurdo"
 
@@ -153,28 +149,27 @@ msgstr "Configuración de Ratón"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 16
 #: rc.cpp:36 ../src/mousedlg.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "MouseSetupDlg"
-msgstr "Configuración de Ratón"
+msgstr "MouseSetupDlg"
 
 #: ../src/kaptan.cpp:57
 msgid "Network Setup"
-msgstr ""
+msgstr "Configuración de Red"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 35
 #: rc.cpp:59 ../src/kaptan.cpp:61 ../src/packagedlg.cpp:101
 #, no-c-format
 msgid "Package Manager"
-msgstr ""
+msgstr "Administrador de Paquetes"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 85
 #: rc.cpp:45 ../src/mousedlg.cpp:119
 #, no-c-format
 msgid "Reverse scroll"
-msgstr ""
+msgstr "Deslizar inverso"
 
 #: ../src/mouse.cpp:31
-#, fuzzy
 msgid "Right handed"
 msgstr "&Normal"
 
@@ -182,31 +177,30 @@ msgstr "&Normal"
 #: rc.cpp:69 ../src/packagedlg.cpp:105
 #, no-c-format
 msgid "Show in system tray"
-msgstr ""
+msgstr "Mostrar en barra de tareas"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 43
 #: rc.cpp:4 ../src/goodbyedlg.cpp:66
 #, no-c-format
 msgid "Start Tasma"
-msgstr ""
+msgstr "Iniciar Tasma"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 16
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 38
 #: rc.cpp:75 rc.cpp:81 ../src/styledlg.cpp:94 ../src/styledlg.cpp:96
 #, no-c-format
 msgid "Style"
-msgstr ""
+msgstr "Estilo"
 
 #: ../src/kaptan.cpp:49
-#, fuzzy
 msgid "Style Setup"
-msgstr "Configuración de Ratón"
+msgstr "Configuración de Estilo"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 62
 #: rc.cpp:87 ../src/styledlg.cpp:98
 #, no-c-format
 msgid "Test Style"
-msgstr ""
+msgstr "Probar estilo"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 27
 #: rc.cpp:13 ../src/welcomedlg.cpp:66
@@ -226,18 +220,18 @@ msgstr ""
 #: rc.cpp:84 ../src/styledlg.cpp:97
 #, no-c-format
 msgid "Use enhanced Kickoff style menu"
-msgstr ""
+msgstr "Usar estilo Kick-off mejorado"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 16
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 38
 #: rc.cpp:20 rc.cpp:26 ../src/wallpaperdlg.cpp:94 ../src/wallpaperdlg.cpp:96
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Wallpaper"
-msgstr "Imagen :"
+msgstr "Imagen de fondo"
 
 #: ../src/kaptan.cpp:53
 msgid "Wallpaper Setup"
-msgstr "Fondo de escritorio"
+msgstr "Configuración de fondo de escritorio"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 16
 #: rc.cpp:10 ../src/kaptan.cpp:41 ../src/welcomedlg.cpp:65
@@ -245,44 +239,3 @@ msgstr "Fondo de escritorio"
 msgid "Welcome"
 msgstr "Bienvenido"
 
-#~ msgid ""
-#~ "<center>\n"
-#~ "You have finished!  Now you can start using Pardus Linux<br>\n"
-#~ "<a href=\"#tasma\">If you want to change more settings click here to "
-#~ "start <b>Pardus Configuration Center</b></a>\n"
-#~ "</center>"
-#~ msgstr ""
-#~ "<center>\n"
-#~ "Terminaste ! Ahora puedes empezar a usar Pardus Linux<br>\n"
-#~ "<a href=\"#tasma\">Si quieres cambiar algo más cliquée aqui para entrar "
-#~ "al<b>Centro de Configuración de Pardus</b></a>\n"
-#~ "</center>"
-
-#~ msgid "Preview :"
-#~ msgstr "Previsualización :"
-
-#~ msgid ""
-#~ "_: EMAIL OF TRANSLATORS\n"
-#~ "Your emails"
-#~ msgstr ""
-#~ "_: email\n"
-#~ "click3d(at)linuxmail.org"
-
-#~ msgid ""
-#~ "_: NAME OF TRANSLATORS\n"
-#~ "Your names"
-#~ msgstr ""
-#~ "_: Traductores\n"
-#~ "Klemens Häckel"
-
-#~ msgid "pix_goodbye"
-#~ msgstr "pix_goodbye"
-
-#~ msgid "pix_kaptan"
-#~ msgstr "pix_kaptan"
-
-#~ msgid "pix_pardus"
-#~ msgstr "pix_pardus"
-
-#~ msgid "pix_wallpaper"
-#~ msgstr "pix_wallpaper"
