--- a/tasma/disk-manager/po/es.po
+++ b/tasma/disk-manager/po/es.po
@@ -1,17 +1,19 @@
+# translation of es.po to spanish
 # translation of es.po to
 # Disk Manager Interface
 # Copyright (C) 2006-2007, TÜBİTAK/UEKAE
 # This file is distributed under the same license as the Disk-Manager package.
 #
 # Gökmen GÖKSEL <gokmen@pardus.org.tr>, 2006.
+# Klemens Häckel <click3d_at_linuxmail_org>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 09:42+0200\n"
-"PO-Revision-Date: 2006-12-02 20:22-0400\n"
-"Last-Translator: Klemens Häckel <click3d@linuxmail.org>\n"
-"Language-Team: es <es@li.org>\n"
+"PO-Revision-Date: 2007-02-04 14:47+0200\n"
+"Last-Translator: Klemens Häckel <click3d_at_linuxmail_org>\n"
+"Language-Team: spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,7 +25,7 @@ msgstr "Administrador de Discos"
 
 #: src/disk-manager.py:113
 msgid "User not in disk group !! Exiting.."
-msgstr "User not in disk group !! Exiting.."
+msgstr "Usuario no en grupo disk !! Saliendo.."
 
 #: src/disk-manager.py:226 src/disk-manager.py:249
 msgid "Completed"
@@ -36,7 +38,7 @@ msgstr "Archivo /etc/fstab actualizado !"
 #: src/disk-manager.py:267
 #, python-format
 msgid "%s for %s failure !!"
-msgstr "%s for %s failure !!"
+msgstr "%s de %s fallado !!"
 
 #: src/disk-manager.py:295
 msgid "Mount Point"
@@ -72,7 +74,7 @@ msgstr "Opciones adicionales:"
 
 #: src/diskform.py:136
 msgid "Get Default Options"
-msgstr "Usar opciones pod defecto"
+msgstr "Usar opciones por defecto"
 
 #: src/diskform.py:137
 msgid "Find Disks Automatically"
@@ -85,4 +87,5 @@ msgstr "Mostrar Particiones del Sistema"
 # i translated as if "to apply changes"..
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr "Para aplicar los cambios se debe ejecutar el Disk Manager como root"
+msgstr "Para aplicar los cambios se debe ejecutar el administrador de discos como root"
+
