--- a/tasma/tasma/po/es.po
+++ b/tasma/tasma/po/es.po
@@ -1,18 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of es.po to spanish
 # This file is put in the public domain.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Klemens Häckel <click3d_at_linuxmail_org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: tasma\n"
+"Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-26 21:00+0200\n"
-"PO-Revision-Date: 2006-11-28 20:00-0400\n"
-"Last-Translator: Klemens Häckel <click3d@linuxmail.org>\n"
+"PO-Revision-Date: 2007-02-04 13:44+0200\n"
+"Last-Translator: Klemens Häckel <click3d_at_linuxmail_org>\n"
 "Language-Team: spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: src/kfile-plugins/pisi/kfile_pisi.cpp:34
 msgid "PiSi Package Info"
@@ -56,11 +57,11 @@ msgstr "Bienvenido a TASMA"
 
 #: src/aboutview.cpp:88
 msgid "TASMA is a configuration application for Pardus Operating System. You can tweak the systems default configuration settings and by using the modules presented in TASMA. "
-msgstr "TASMA es una aplicación para la configuración del Sistema Operativo Pardus. Puedes ajustar las configuraciones del sistema usando los módulos presentes en TASMA. "
+msgstr "TASMA es una aplicación para la configuración del Sistema Operativo Pardus. Puede ajustar las configuraciones del sistema usando los módulos presentes en TASMA. "
 
 #: src/aboutview.cpp:99
 msgid "For a better understanding modules are grouped by categories. You can activate a category by selecting a category from the left. After activating a category its contents will be shown as icons in the right panel. You can start a configuration module by clicking (or double clicking) its icon."
-msgstr "Para una mayor claridad los módulos están agrupados en categorías. Puedes activar una categoría seleccionando una de las categorías de la izquierda. Luego de activar una categoría se presentará su contenido con íconos en el panel derecho. Puedes arrancar un módulo de configuración con un clic (o doble-clic) sobre su ícono."
+msgstr "Para una mayor claridad, los módulos están agrupados en categorías. Puede activar una categoría seleccionando una de las categorías de la izquierda. Luego de activar una categoría se presentará su contenido con íconos en el panel derecho. Puede iniciar un módulo de configuración con un clic (o doble-clic) sobre su ícono."
 
 #: src/main.cpp:62
 msgid "TASMA - Pardus Configuration Center"
@@ -89,7 +90,7 @@ msgstr "Desarolladores KDE"
 
 #: src/main.cpp:67
 msgid "Module Developers"
-msgstr "Desarolladores de Módulos"
+msgstr "Desarolladores de Módulo"
 
 #: src/tasmamainwin.cpp:80
 msgid "About Current Module"
@@ -102,14 +103,12 @@ msgstr "Otros"
 
 #: modules/tasmatv/tasmatv.cpp:39
 #: modules/tasmatv/tasmatv.cpp:40
-#, fuzzy
 msgid "TASMA Tv Card Configuration Module"
-msgstr "TASMA - Centro de Configuración de Pardus"
+msgstr "TASMA Módulo de configuración de tarjeta TV"
 
 #: modules/tasmatv/tasmatv.cpp:42
-#, fuzzy
 msgid "(c) 2005-2006, TUBITAK - UEKAE"
-msgstr "(c) 2005, TUBITAK - UEKAE"
+msgstr "(c) 2005 - 2006, TUBITAK - UEKAE"
 
 #: modules/tasmatv/tasmatv.cpp:81
 msgid "Tv card configuration module for TASMA."
