some work, nothing is important

--- a/knazar/ChangeLog
+++ b/knazar/ChangeLog
@@ -1,6 +1,6 @@
-* 16/12/2005 S.Çağkar Onur <caglar _at_ uludag.org.tr>:
+* 16/12/2005 S.Çağkar Onur <caglar _at_ pardus.org.tr>:
     New icons by Serdat Soytetir
 
-* 17/9/2005 S.Çağlar Onur <caglar _at_ uludag.org.tr>:
+* 17/9/2005 S.Çağlar Onur <caglar _at_ pardus.org.tr>:
 	Build system now uses SCons instead of old and ugly autotools/automake
 	and their family...
