--- a/tasma/disk-manager/po/nl.po
+++ b/tasma/disk-manager/po/nl.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-12 09:42+0200\n"
+"POT-Creation-Date: 2007-02-09 15:33+0200\n"
 "PO-Revision-Date: 2006-12-25 23:16+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
@@ -22,39 +22,6 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: src/disk-manager.py:94 src/disk-manager.py:362 src/diskform.py:132
-msgid "Disk Manager"
-msgstr "Schijfbeheer"
-
-#: src/disk-manager.py:113
-msgid "User not in disk group !! Exiting.."
-msgstr "Gebruiker niet in de schijfgroep !! Beëindig.."
-
-#: src/disk-manager.py:226 src/disk-manager.py:249
-msgid "Completed"
-msgstr "Voltooid"
-
-#: src/disk-manager.py:226 src/disk-manager.py:249
-msgid "File /etc/fstab updated !"
-msgstr "Bestand /etc/fstab bijgewerkt !"
-
-#: src/disk-manager.py:267
-#, python-format
-msgid "%s for %s failure !!"
-msgstr "%s voor %s mislukt !!"
-
-#: src/disk-manager.py:295
-msgid "Mount Point"
-msgstr "Aankoppelpunt"
-
-#: src/disk-manager.py:296
-msgid "File System Type"
-msgstr "Bestandssysteem type"
-
-#: src/disk-manager.py:357
-msgid "Disk Manager is already running!"
-msgstr "Schijfbeheer is al actief!"
-
 #: src/diskform.py:92 src/diskform.py:139
 msgid "Disks"
 msgstr "Schijven"
@@ -62,6 +29,10 @@ msgstr "Schijven"
 #: src/diskform.py:93 src/diskform.py:140
 msgid "Partitions"
 msgstr "Partities"
+
+#: src/diskform.py:132 src/disk-manager.py:94 src/disk-manager.py:379
+msgid "Disk Manager"
+msgstr "Schijfbeheer"
 
 #: src/diskform.py:133
 msgid "File System Type :"
@@ -89,5 +60,35 @@ msgstr "Toon systeempartities"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr "Om schijf veranderingen bij te werken zal de schijfbeheer actief moeten zijn als root"
+msgstr ""
+"Om schijf veranderingen bij te werken zal de schijfbeheer actief moeten zijn "
+"als root"
 
+#: src/disk-manager.py:126
+msgid "User not in disk group !"
+msgstr "Gebruiker niet in de schijfgroep !"
+
+#: src/disk-manager.py:227 src/disk-manager.py:250
+msgid "Completed"
+msgstr "Voltooid"
+
+#: src/disk-manager.py:227 src/disk-manager.py:250
+msgid "File /etc/fstab updated !"
+msgstr "Bestand /etc/fstab bijgewerkt !"
+
+#: src/disk-manager.py:268
+#, python-format
+msgid "%s for %s failure !!"
+msgstr "%s voor %s mislukt !!"
+
+#: src/disk-manager.py:296
+msgid "Mount Point"
+msgstr "Aankoppelpunt"
+
+#: src/disk-manager.py:297
+msgid "File System Type"
+msgstr "Bestandssysteem type"
+
+#: src/disk-manager.py:374
+msgid "Disk Manager is already running!"
+msgstr "Schijfbeheer is al actief!"
