--- a/tasma/disk-manager/po/tr.po
+++ b/tasma/disk-manager/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tr\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-12 09:42+0200\n"
+"POT-Creation-Date: 2007-02-09 15:33+0200\n"
 "PO-Revision-Date: 2006-11-30 22:01+0200\n"
 "Last-Translator: Gökmen GÖKSEL <gokmen@pardus.org.tr>\n"
 "Language-Team:  <tr@li.org>\n"
@@ -17,39 +17,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: src/disk-manager.py:94 src/disk-manager.py:362 src/diskform.py:132
-msgid "Disk Manager"
-msgstr "Disk Yöneticisi"
-
-#: src/disk-manager.py:113
-msgid "User not in disk group !! Exiting.."
-msgstr "Kullanıcı disk grubunda değil !! Çıkılıyor.."
-
-#: src/disk-manager.py:226 src/disk-manager.py:249
-msgid "Completed"
-msgstr "Tamamlandı"
-
-#: src/disk-manager.py:226 src/disk-manager.py:249
-msgid "File /etc/fstab updated !"
-msgstr "Dosya /etc/fstab güncellendi !"
-
-#: src/disk-manager.py:267
-#, python-format
-msgid "%s for %s failure !!"
-msgstr "%s işlemi %s için başarısız oldu !!"
-
-#: src/disk-manager.py:295
-msgid "Mount Point"
-msgstr "Bağlama Noktası"
-
-#: src/disk-manager.py:296
-msgid "File System Type"
-msgstr "Dosya Sistemi Tipi"
-
-#: src/disk-manager.py:357
-msgid "Disk Manager is already running!"
-msgstr "Disk Yöneticisi zaten çalışıyor!"
-
 #: src/diskform.py:92 src/diskform.py:139
 msgid "Disks"
 msgstr "Diskler "
@@ -57,6 +24,10 @@ msgstr "Diskler "
 #: src/diskform.py:93 src/diskform.py:140
 msgid "Partitions"
 msgstr "Disk Bölümleri"
+
+#: src/diskform.py:132 src/disk-manager.py:94 src/disk-manager.py:379
+msgid "Disk Manager"
+msgstr "Disk Yöneticisi"
 
 #: src/diskform.py:133
 msgid "File System Type :"
@@ -85,3 +56,32 @@ msgstr "Sistem Bölümlerini Göster"
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
 msgstr "Disk değişiklikleri için yönetici girişi yapmalısınız"
+
+#: src/disk-manager.py:126
+msgid "User not in disk group !"
+msgstr "Kullanıcı disk grubunda değil !"
+
+#: src/disk-manager.py:227 src/disk-manager.py:250
+msgid "Completed"
+msgstr "Tamamlandı"
+
+#: src/disk-manager.py:227 src/disk-manager.py:250
+msgid "File /etc/fstab updated !"
+msgstr "Dosya /etc/fstab güncellendi !"
+
+#: src/disk-manager.py:268
+#, python-format
+msgid "%s for %s failure !!"
+msgstr "%s işlemi %s için başarısız oldu !!"
+
+#: src/disk-manager.py:296
+msgid "Mount Point"
+msgstr "Bağlama Noktası"
+
+#: src/disk-manager.py:297
+msgid "File System Type"
+msgstr "Dosya Sistemi Tipi"
+
+#: src/disk-manager.py:374
+msgid "Disk Manager is already running!"
+msgstr "Disk Yöneticisi zaten çalışıyor!"
